# pmm-sim

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  requirements.txt  rustfmt.toml  setup.toml
cfg/: setup.toml  tokens.json
dataset/: 389129965_goonfi_4uWuh9fC7rrZKrN8ZdJf69MN1e2S7FPpMqcsyY1aof6K_20251225-212154.csv  389129965_tessera_FLckHLGMJy5gEoXWwcE68Nprde1D4araK4TGLw4pQq2n_20251225-212154.csv  389131875_humidifi_FksffEqnBRixYGR791Qw2MgdU7zNCpHVFYBL4Fa4qVuH_20251225-213420.csv  389131875_solfi-v2_65ZHSArs5XxPseKQbB1B4r16vDxMWnCxHMzogDAqiDUc_20251225-213420.csv  389131875_tessera_FLckHLGMJy5gEoXWwcE68Nprde1D4araK4TGLw4pQq2n_20251225-213420.csv  389141466_humidifi_FksffEqnBRixYGR791Qw2MgdU7zNCpHVFYBL4Fa4qVuH_20251225-223701.csv  389141466_solfi-v2_65ZHSArs5XxPseKQbB1B4r16vDxMWnCxHMzogDAqiDUc_20251225-223701.csv
datasets/: 389129965_goonfi_4uWuh9fC7rrZKrN8ZdJf69MN1e2S7FPpMqcsyY1aof6K_20251225-212154.parquet  389129965_humidifi_FksffEqnBRixYGR791Qw2MgdU7zNCpHVFYBL4Fa4qVuH_20251225-212154.csv  389129965_humidifi_FksffEqnBRixYGR791Qw2MgdU7zNCpHVFYBL4Fa4qVuH_20251225-212154.parquet  389129965_solfi-v2_65ZHSArs5XxPseKQbB1B4r16vDxMWnCxHMzogDAqiDUc_20251225-212154.csv  389129965_solfi-v2_65ZHSArs5XxPseKQbB1B4r16vDxMWnCxHMzogDAqiDUc_20251225-212154.parquet  389129965_tessera_FLckHLGMJy5gEoXWwcE68Nprde1D4araK4TGLw4pQq2n_20251225-212154.parquet  389131875_goonfi_4uWuh9fC7rrZKrN8ZdJf69MN1e2S7FPpMqcsyY1aof6K_20251225-213420.csv  389131875_goonfi_4uWuh9fC7rrZKrN8ZdJf69MN1e2S7FPpMqcsyY1aof6K_20251225-213420.parquet  389131875_humidifi_FksffEqnBRixYGR791Qw2MgdU7zNCpHVFYBL4Fa4qVuH_20251225-213420.parquet  389131875_solfi-v2_65ZHSArs5XxPseKQbB1B4r16vDxMWnCxHMzogDAqiDUc_20251225-213420.parquet  389131875_tessera_FLckHLGMJy5gEoXWwcE68Nprde1D4araK4TGLw4pQq2n_20251225-213420.parquet  389141466_goonfi_4uWuh9fC7rrZKrN8ZdJf69MN1e2S7FPpMqcsyY1aof6K_20251225-223701.csv  389141466_goonfi_4uWuh9fC7rrZKrN8ZdJf69MN1e2S7FPpMqcsyY1aof6K_20251225-223701.parquet  389141466_humidifi_FksffEqnBRixYGR791Qw2MgdU7zNCpHVFYBL4Fa4qVuH_20251225-223701.parquet  389141466_solfi-v2_65ZHSArs5XxPseKQbB1B4r16vDxMWnCxHMzogDAqiDUc_20251225-223701.parquet  389141466_tessera_FLckHLGMJy5gEoXWwcE68Nprde1D4araK4TGLw4pQq2n_20251225-223701.csv  389141466_tessera_FLckHLGMJy5gEoXWwcE68Nprde1D4araK4TGLw4pQq2n_20251225-223701.parquet  389141713_goonfi_4uWuh9fC7rrZKrN8ZdJf69MN1e2S7FPpMqcsyY1aof6K_20251225-223837.csv  389141713_goonfi_4uWuh9fC7rrZKrN8ZdJf69MN1e2S7FPpMqcsyY1aof6K_20251225-223837.parquet  389141713_humidifi_FksffEqnBRixYGR791Qw2MgdU7zNCpHVFYBL4Fa4qVuH_20251225-223837.csv  389141713_humidifi_FksffEqnBRixYGR791Qw2MgdU7zNCpHVFYBL4Fa4qVuH_20251225-223837.parquet  (+154 more)
scripts/: gen.sh  plot.py  plot_all.py
src/: builder.rs  (+5 more)
(+89 files in other folders)
