[package]
name = "pmm-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.53", features = ["derive", "env", "color", "std"] }
eyre = "0.6.12"
litesvm = "0.8.2"
magnus-shared = { path = "/Users/lbkolev/.code/magnus/crates/shared" }
magnus-router-client = { path = "/Users/lbkolev/.code/magnus/crates/router-client" }
serde = "1.0.228"
serde_json = "1.0.145"
solana-compute-budget = "=3.0.0"
solana-rent-collector = "2.3.0"
solana-sdk = "3.0.0"
spl-associated-token-account = "8.0.0"
spl-token = "9.0.0"
secrecy = "0.10.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "time"] }
solana-client = "3.0.0"


[dev-dependencies]
criterion = "0.8.1"
