[package]
name = "pmm-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive", "env", "color", "std"] }
csv = "1.4.0"
eyre = "0.6.12"
indicatif = "0.18.3"
litesvm = "0.8.2"
magnus-router-client = { git = "ssh://git@github.com/limechain/magnus.git", tag = "0.0.1-rc" }
magnus-shared = { git = "ssh://git@github.com/limechain/magnus.git", tag = "0.0.1-rc" }
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
solana-client = "=3.0.0"
solana-commitment-config = "3.1.0"
solana-compute-budget = "=3.0.0"
solana-sdk = "3.0.0"
spl-associated-token-account = "8.0.0"
spl-token = "9.0.0"
toml = "0.9.10"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "time"] }
