[package]
name = "pmm-sim"
version = "0.2.0"
edition = "2024"

[lib]
name = "pmm_sim"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "pmm-sim"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive", "env", "color", "std"] }
eyre = "0.6.12"
indexmap = { version = "2.13.0", features = ["serde"] }
indicatif = "0.18.3"
litesvm = "0.8.2"
magnus-router-client = { git = "https://git@github.com/limechain/magnus.git", rev = "24958ce" }
magnus-shared = { git = "https://git@github.com/limechain/magnus.git", rev = "24958ce" }
polars = { version = "0.52", features = ["parquet"] }
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
solana-client = "=3.0.0"
solana-commitment-config = "3.1.0"
solana-compute-budget = "=3.0.0"
solana-sdk = "3.0.0"
spl-associated-token-account = "8.0.0"
spl-token = "9.0.0"
toml = "0.9.10"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "time"] }
